--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -34,10 +34,12 @@
 
         @media screen and (max-width: 576px) {
             flex-direction: column;
+            gap: 3rem;
         }
 
         @media screen and (min-width: 576px) and (max-width: 992px) {
             flex-direction: column;
+            gap: 3rem;
         }
 
         &-item {
